完整的项目（初版），涵盖完整交易链路，包括AI助手个性化推荐